// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = ios snapshot dos estilos do design system no modal de novo medicamento (ios): FormField "Ex: 500mg" (ios) 1`] = `
{
  "backgroundColor": "#FFFFFF",
  "borderColor": "#E5E7EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "color": "#111827",
  "fontSize": 16,
  "paddingHorizontal": 16,
  "paddingVertical": 16,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = ios snapshot dos estilos do design system no modal de novo medicamento (ios): FormField "Ex: Paracetamol" (ios) 1`] = `
{
  "backgroundColor": "#FFFFFF",
  "borderColor": "#E5E7EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "color": "#111827",
  "fontSize": 16,
  "paddingHorizontal": 16,
  "paddingVertical": 16,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = ios snapshot dos estilos do design system no modal de novo medicamento (ios): botão Cancelar (ios) 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#FFFFFF",
  "borderColor": "#2563EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "flexBasis": 120,
  "flexGrow": 1,
  "justifyContent": "center",
  "minHeight": 44,
  "paddingVertical": 8,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = ios snapshot dos estilos do design system no modal de novo medicamento (ios): botão Criar (ios) 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#2563EB",
  "borderRadius": 10,
  "flexBasis": 120,
  "flexGrow": 1,
  "justifyContent": "center",
  "minHeight": 44,
  "paddingVertical": 8,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = web snapshot dos estilos do design system no modal de novo medicamento (web): FormField "Ex: 500mg" (web) 1`] = `
{
  "backgroundColor": "#FFFFFF",
  "borderColor": "#E5E7EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "color": "#111827",
  "fontSize": 16,
  "paddingHorizontal": 16,
  "paddingVertical": 16,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = web snapshot dos estilos do design system no modal de novo medicamento (web): FormField "Ex: Paracetamol" (web) 1`] = `
{
  "backgroundColor": "#FFFFFF",
  "borderColor": "#E5E7EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "color": "#111827",
  "fontSize": 16,
  "paddingHorizontal": 16,
  "paddingVertical": 16,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = web snapshot dos estilos do design system no modal de novo medicamento (web): botão Cancelar (web) 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#FFFFFF",
  "borderColor": "#2563EB",
  "borderRadius": 10,
  "borderWidth": 1,
  "flexBasis": 120,
  "flexGrow": 1,
  "justifyContent": "center",
  "minHeight": 44,
  "paddingVertical": 8,
}
`;

exports[`MedicationStockScreen - modal Novo Medicamento sob Platform.OS = web snapshot dos estilos do design system no modal de novo medicamento (web): botão Criar (web) 1`] = `
{
  "alignItems": "center",
  "backgroundColor": "#2563EB",
  "borderRadius": 10,
  "flexBasis": 120,
  "flexGrow": 1,
  "justifyContent": "center",
  "minHeight": 44,
  "paddingVertical": 8,
}
`;
